--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,5 +24,6 @@
     <color name="color_7C7877">#7C7877</color>
     <color name="color_FF6200">#FF6200</color>
     <color name="color_FF5050">#FF5050</color>
+    <color name="color_FF6300">#FF6300</color>
 
 </resources>
