--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,21 @@
         <item name="android:activityCloseExitAnimation">@anim/pre_exit_out</item>
     </style>
 
+
+
+    <!-- 重写系统弹出Dialog -->
+    <style name="loadingDialogTheme" parent="android:Theme.Dialog">
+        <!-- 设置对话框的背景 -->
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowFrame">@null</item>
+        <!--         <item name="android:backgroundDimEnabled">true</item> -->
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <!-- 点击对话框外面消失对话框 -->
+        <item name="android:windowCloseOnTouchOutside">false</item>
+        <!-- 除去背景色 -->
+    </style>
 </resources>
