--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,78 +9,172 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="95dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/btn_gradient_yellow"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/btn_gradient_yellow"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="35dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp">
+                android:orientation="vertical">
 
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/icon_dingwe_bai" />
+                    android:gravity="center_vertical"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="12dp"
+                    android:orientation="horizontal"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:text="上海市"
-                    android:textColor="@color/white"
-                    android:textSize="16sp" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:src="@drawable/icon_xiangxiaxuanze" />
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="1dp"
-                    android:layout_weight="1" />
-
-                <RelativeLayout
-                    android:id="@+id/rl_unread"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
 
                     <ImageView
-                        android:id="@+id/iv_msg"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:scaleType="centerInside"
-                        android:src="@drawable/icon_xiaoxi" />
+                        android:src="@drawable/icon_dingwe_bai" />
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
+                        android:text="上海市"
+                        android:textColor="@color/white"
+                        android:textSize="16sp" />
 
                     <ImageView
-                        android:id="@+id/iv_unread"
-                        android:layout_width="5dp"
-                        android:layout_height="5dp"
-                        android:layout_alignRight="@+id/iv_msg"
-                        android:background="@drawable/cycle"
-                        android:gravity="center" />
-                </RelativeLayout>
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
+                        android:src="@drawable/icon_xiangxiaxuanze" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="1dp"
+                        android:layout_weight="1" />
+
+                    <RelativeLayout
+                        android:id="@+id/rl_unread"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:id="@+id/iv_msg"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:scaleType="centerInside"
+                            android:src="@drawable/icon_xiaoxi" />
+
+
+                        <ImageView
+                            android:id="@+id/iv_unread"
+                            android:layout_width="5dp"
+                            android:layout_height="5dp"
+                            android:layout_alignRight="@+id/iv_msg"
+                            android:background="@drawable/cycle"
+                            android:gravity="center" />
+                    </RelativeLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_tongzhi"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="14dp"
+                    android:paddingRight="10dp"
+                    android:paddingLeft="10dp"
+                    android:background="@drawable/bg_round15dp_white"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/icon_tongzhi"/>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="13sp"
+                        android:textColor="@color/color_FF6300"
+                        android:text="当前地址超出配送范围，请重新定位"/>
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/icon_guanbi"/>
+
+                </LinearLayout>
             </LinearLayout>
+
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:gravity="center_vertical"
+                android:minHeight="?android:attr/actionBarSize"
+                android:background="@drawable/bg_topround30dp_white"
+                android:orientation="vertical">
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/bg_round15dp_grey"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:src="@drawable/icon_search_xiao" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="6dp"
+                        android:layout_marginRight="6dp"
+                        android:layout_weight="1"
+                        android:text="午餐"
+                        android:textColor="@color/color_CBCBCB"
+                        android:textSize="14sp" />
+
+
+                    <TextView
+                        android:layout_width="55dp"
+                        android:layout_height="25dp"
+                        android:layout_marginRight="2.5dp"
+                        android:background="@drawable/btn_gradient_yellow_round"
+                        android:gravity="center"
+                        android:text="搜索"
+                        android:textColor="@color/white"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
+
+            </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
@@ -97,65 +191,5 @@
 
     </androidx.core.widget.NestedScrollView>
 
-    <!--    android:elevation="4dp"-->
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:gravity="bottom"
-        app:contentInsetStart="0dp"
-        android:background="@color/transparent"
-        app:layout_anchor="@id/appbar"
-        app:layout_anchorGravity="bottom"
-        app:layout_collapseMode="pin">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:gravity="center_vertical"
-            android:minHeight="?android:attr/actionBarSize"
-            android:background="@drawable/bg_topround30dp_white"
-            android:orientation="vertical">
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/bg_round15dp_grey"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:src="@drawable/icon_search_xiao" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="6dp"
-                    android:layout_marginRight="6dp"
-                    android:layout_weight="1"
-                    android:text="午餐"
-                    android:textColor="@color/color_CBCBCB"
-                    android:textSize="14sp" />
-
-
-                <TextView
-                    android:layout_width="55dp"
-                    android:layout_height="25dp"
-                    android:layout_marginRight="2.5dp"
-                    android:background="@drawable/btn_gradient_yellow_round"
-                    android:gravity="center"
-                    android:text="搜索"
-                    android:textColor="@color/white"
-                    android:textSize="14sp" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-    </androidx.appcompat.widget.Toolbar>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
