--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -7,11 +7,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="9dp"
-        android:background="@drawable/bg_transfer">
+        android:background="@drawable/shadow">
 
 
         <ImageView
