--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,9 +2,11 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/color_F5F5F5"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/color_F5F5F5">
+
+
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
@@ -12,6 +14,9 @@
         android:layout_height="wrap_content"
         android:background="@drawable/btn_gradient_yellow"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+
+
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing"
@@ -31,9 +36,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
                     android:layout_marginTop="30dp"
                     android:layout_marginBottom="12dp"
+                    android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp">
@@ -94,31 +99,31 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="14dp"
-                    android:paddingRight="10dp"
-                    android:paddingLeft="10dp"
                     android:background="@drawable/bg_round15dp_white"
                     android:gravity="center_vertical"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp">
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/icon_tongzhi"/>
+                        android:src="@drawable/icon_tongzhi" />
 
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginLeft="10dp"
                         android:layout_height="wrap_content"
-                        android:textSize="13sp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_weight="1"
+                        android:text="当前地址超出配送范围，请重新定位"
                         android:textColor="@color/color_FF6300"
-                        android:text="当前地址超出配送范围，请重新定位"/>
+                        android:textSize="13sp" />
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/icon_guanbi"/>
+                        android:src="@drawable/icon_guanbi" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -127,55 +132,57 @@
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
 
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@drawable/bg_topround30dp_white"
+            android:gravity="center_vertical"
+            android:minHeight="?android:attr/actionBarSize"
+            android:orientation="vertical">
+
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/bg_round15dp_grey"
                 android:gravity="center_vertical"
-                android:minHeight="?android:attr/actionBarSize"
-                android:background="@drawable/bg_topround30dp_white"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:background="@drawable/bg_round15dp_grey"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
+                    android:src="@drawable/icon_search_xiao" />
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:src="@drawable/icon_search_xiao" />
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="6dp"
-                        android:layout_marginRight="6dp"
-                        android:layout_weight="1"
-                        android:text="午餐"
-                        android:textColor="@color/color_CBCBCB"
-                        android:textSize="14sp" />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
+                    android:layout_weight="1"
+                    android:text="午餐"
+                    android:textColor="@color/color_CBCBCB"
+                    android:textSize="14sp" />
 
 
-                    <TextView
-                        android:layout_width="55dp"
-                        android:layout_height="25dp"
-                        android:layout_marginRight="2.5dp"
-                        android:background="@drawable/btn_gradient_yellow_round"
-                        android:gravity="center"
-                        android:text="搜索"
-                        android:textColor="@color/white"
-                        android:textSize="14sp" />
-
-                </LinearLayout>
+                <TextView
+                    android:layout_width="55dp"
+                    android:layout_height="25dp"
+                    android:layout_marginRight="2.5dp"
+                    android:background="@drawable/btn_gradient_yellow_round"
+                    android:gravity="center"
+                    android:text="搜索"
+                    android:textColor="@color/white"
+                    android:textSize="14sp" />
 
             </LinearLayout>
+
+        </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
+
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -184,10 +191,10 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp" />
 
     </androidx.core.widget.NestedScrollView>
 
