--- a/app/src/main/res/layout/item_food.xml
+++ b/app/src/main/res/layout/item_food.xml
@@ -91,7 +91,7 @@
         android:id="@+id/tv_sells"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="3公里，约15分钟"
+        android:text="月售3890"
         android:textSize="12sp"
         android:textStyle="bold"
         android:layout_marginLeft="10dp"
