--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,5 +25,5 @@
     <color name="color_FF6200">#FF6200</color>
     <color name="color_FF5050">#FF5050</color>
     <color name="color_FF6300">#FF6300</color>
-
+    <color name="color_2CD18A">#2CD18A</color>
 </resources>
