--- a/crecyclerview/src/main/res/layout/crecyclerview_indicator.xml
+++ b/crecyclerview/src/main/res/layout/crecyclerview_indicator.xml
@@ -3,30 +3,16 @@
     android:id="@+id/ll_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_default"
     android:orientation="vertical">
 
     <com.huaxiafinance.www.crecyclerview.cindicatorview.indicator.TitleIndicator
         android:id="@+id/indicator"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:background="@color/white" />
+        android:layout_height="wrap_content" />
 
-    <FrameLayout
+    <com.huaxiafinance.www.crecyclerview.cindicatorview.CViewPager
+        android:id="@+id/cindicator_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent" />
 
-        <com.huaxiafinance.www.crecyclerview.cindicatorview.CViewPager
-            android:id="@+id/cindicator_viewpager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <ImageView
-            android:id="@+id/shadow_img"
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/bg_zhuangtailan2" />
-
-    </FrameLayout>
 </LinearLayout>
