--- a/app/src/main/res/layout/item_store.xml
+++ b/app/src/main/res/layout/item_store.xml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingTop="5dp"
-    android:paddingRight="5dp"
-    android:paddingLeft="5dp"
-    android:paddingBottom="22dp"
-    android:background="@drawable/shadow">
-
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/iv_icon"
@@ -97,12 +91,4 @@
         android:paddingTop="12dp"
         android:visibility="gone"
         android:src="@drawable/icon_dingwei_cheng"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/iv_icon"
-        android:layout_marginLeft="10dp"/>
-
 </RelativeLayout>
