--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,4 +29,6 @@
     <color name="color_2CD18A">#2CD18A</color>
     <color name="color_3B3838">#3B3838</color>
     <color name="color_FF4F4F">#FF4F4F</color>
+    <color name="color_E9E9E9">#E9E9E9</color>
+    <color name="color_FF6600">#FF6600</color>
 </resources>
