--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -147,7 +147,7 @@
                 android:layout_height="30dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:background="@drawable/bg_round15dp_grey"
+                android:background="@drawable/bg_round_grey"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
