--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,4 +31,6 @@
     <color name="color_FF4F4F">#FF4F4F</color>
     <color name="color_E9E9E9">#E9E9E9</color>
     <color name="color_FF6600">#FF6600</color>
+    <color name="color_3C3838">#3C3838</color>
+    <color name="color_FF564A">#FF564A</color>
 </resources>
