--- a/app/src/main/res/layout/item_store_food.xml
+++ b/app/src/main/res/layout/item_store_food.xml
@@ -64,21 +64,47 @@
         android:id="@+id/iv_goods_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:text="¥10"
         android:textColor="@color/color_FF4F4F"
         android:textSize="12sp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="@+id/iv_goods_name"
-        app:layout_constraintTop_toBottomOf="@+id/iv_goods_comment" />
+        app:layout_constraintBottom_toBottomOf="@+id/iv_goods_img"
+        app:layout_constraintLeft_toLeftOf="@+id/iv_goods_name"/>
 
-    <ImageView
+    <TextView
+        android:id="@+id/iv_goods_price_past"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:text="¥10"
+        android:textColor="@color/color_ccc"
+        android:textSize="11sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_goods_img"
+        app:layout_constraintLeft_toRightOf="@+id/iv_goods_price"/>
+
+    <com.bee.user.widget.AddRemoveView
         android:id="@+id/iv_goods_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:src="@drawable/icon_tianjia"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_choosetype"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:textColor="@color/white"
+        android:layout_marginRight="10dp"
+        android:textSize="12sp"
+        android:paddingLeft="6dp"
+        android:paddingRight="6dp"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
+        android:background="@drawable/btn_gradient_yellow_round"
+        android:text="选规格"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
