--- a/app/src/main/res/layout/activity_miaosha.xml
+++ b/app/src/main/res/layout/activity_miaosha.xml
@@ -20,7 +20,7 @@
 
 
     <ImageButton
-        android:id="@+id/back"
+        android:id="@+id/iv_back"
         android:layout_width="wrap_content"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
