--- a/app/src/main/res/layout/activity_password_login.xml
+++ b/app/src/main/res/layout/activity_password_login.xml
@@ -5,7 +5,7 @@
 
 
     <ImageButton
-        android:id="@+id/iv_close"
+        android:id="@+id/iv_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/transparent"
