--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -16,8 +16,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/bg_chengse"
-            app:expandedTitleMarginEnd="64dp"
-            app:expandedTitleMarginStart="48dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
 
@@ -192,85 +190,5 @@
 
     <!--    </androidx.core.widget.NestedScrollView>-->
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_qujiesuan"
-        android:layout_gravity="bottom"
-        android:layout_width="match_parent"
-        android:background="@color/white"
-        android:elevation="5dp"
-        android:layout_height="44dp">
-
-        <ImageView
-            android:id="@+id/image_xuangou"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:src="@drawable/icon_xuangou"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-        
-        <TextView
-            android:id="@+id/tv_xuangou_tag"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:background="@drawable/cycle"
-            android:text="2"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:textSize="12sp"
-            app:layout_constraintTop_toTopOf="@+id/image_xuangou"
-            app:layout_constraintRight_toRightOf="@+id/image_xuangou"/>
-
-
-        <TextView
-            android:id="@+id/tv_heji"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="合计"
-            android:textColor="@color/color_282626"
-            android:textSize="12sp"
-            android:layout_marginLeft="10dp"
-            app:layout_constraintTop_toTopOf="@+id/image_xuangou"
-            app:layout_constraintLeft_toRightOf="@+id/image_xuangou"/>
-
-
-        <TextView
-            android:id="@+id/tv_heji_money"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:text="¥10"
-            android:textColor="@color/color_FF564A"
-            android:textSize="12sp"
-            android:layout_marginLeft="6dp"
-            app:layout_constraintTop_toTopOf="@+id/image_xuangou"
-            app:layout_constraintLeft_toRightOf="@+id/tv_heji"/>
-        <TextView
-            android:id="@+id/tv_des"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="满20.00元可免费配送"
-            android:textColor="@color/color_7C7877"
-            android:textSize="12sp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="4dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_heji"
-            app:layout_constraintLeft_toRightOf="@+id/image_xuangou"/>
-
-        <TextView
-            android:id="@+id/tv_confirm"
-            android:layout_width="100dp"
-            android:layout_height="33dp"
-            android:gravity="center"
-            android:text="去结算"
-            android:textColor="@color/white"
-            android:textSize="17sp"
-            android:layout_marginRight="15dp"
-            android:background="@drawable/btn_gradient_yellow_round"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <include layout="@layout/item_store_bottom"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
