--- a/app/src/main/res/layout/dialog_store_bottom_choose.xml
+++ b/app/src/main/res/layout/dialog_store_bottom_choose.xml
@@ -4,8 +4,6 @@
     android:layout_height="wrap_content"
     android:paddingBottom="30dp"
     android:paddingTop="20dp"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg_topround20dp_white">
 
@@ -13,8 +11,7 @@
         android:id="@+id/close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:paddingBottom="10dp"
+        android:padding="10dp"
         android:src="@drawable/icon_guanbi"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
