--- a/app/src/main/res/layout/fragment_nearby_list.xml
+++ b/app/src/main/res/layout/fragment_nearby_list.xml
@@ -4,20 +4,21 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="10dp"
+        android:elevation="5dp"
         android:text="附近商家"
         android:textStyle="bold"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="10dp"
         android:textColor="@color/color_282525"
         android:textSize="22sp"/>
 
     <com.huaxiafinance.www.crecyclerview.crecyclerView.CRecyclerView
         android:id="@+id/crecyclerview"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </LinearLayout>
