--- a/app/src/main/res/layout/fragment_store_comment.xml
+++ b/app/src/main/res/layout/fragment_store_comment.xml
@@ -131,60 +131,12 @@
         android:background="@color/color_F5F5F5"/>
 
 
-    <LinearLayout
-        android:id="@+id/ll_tag"
-        android:layout_marginLeft="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <include layout="@layout/item_comment"
         app:layout_constraintTop_toBottomOf="@+id/line"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="27dp"
-            android:paddingTop="5dp"
-            android:paddingRight="10dp"
-            android:paddingLeft="10dp"
-            android:textSize="13sp"
-            android:textColor="@color/white"
-            android:background="@drawable/bg_store_comment_tag"
-            android:text="全部"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="27dp"
-            android:paddingTop="5dp"
-            android:paddingRight="10dp"
-            android:paddingLeft="10dp"
-            android:layout_marginLeft="10dp"
-            android:textSize="13sp"
-            android:textColor="@color/color_3B3838"
-            android:background="@drawable/bg_store_comment_tag_grey"
-            android:text="最新"/>
-    </LinearLayout>
-
-
-    <TextView
-        android:id="@+id/tv_content_only"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:layout_marginLeft="10dp"
-        android:textColor="@color/color_3B3838"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/ll_tag"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:drawableLeft="@drawable/icon_gouxuan"
-        android:drawablePadding="10dp"
-        android:text="只看有内容"/>
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_content_only"/>
+        android:layout_width="match_parent"
+        android:layout_height="0dp"  />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
