--- a/app/src/main/res/layout/activity_base_pre.xml
+++ b/app/src/main/res/layout/activity_base_pre.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/base_pre_content"
     android:orientation="vertical"
+    android:background="@color/color_F5F5F5"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
