--- a/app/src/main/res/layout/activity_dingwei.xml
+++ b/app/src/main/res/layout/activity_dingwei.xml
@@ -67,7 +67,7 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         android:layout_marginBottom="10dp"
-                        android:background="@drawable/bg_round_grey"
+                        android:background="@drawable/bg_round100_grey"
                         android:orientation="horizontal">
 
 
