--- a/app/src/main/res/layout/dialog_home_ditu.xml
+++ b/app/src/main/res/layout/dialog_home_ditu.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="300dp"
     android:padding="15dp"
-    android:background="@drawable/bg_round_white">
+    android:background="@drawable/bg_round20_white">
 
 
     <WebView
