--- a/app/src/main/res/layout/item_store_comment.xml
+++ b/app/src/main/res/layout/item_store_comment.xml
@@ -72,14 +72,15 @@
         android:textColor="@color/color_282525"
         android:textSize="14sp"/>
 
-    <ImageView
-        android:id="@+id/iv_tupian"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/images"
+        android:layout_marginTop="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_des"
-        android:layout_marginTop="16dp"
-        android:src="@drawable/food2"/>
+        android:layout_width="match_parent"
+        android:layout_height="100dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -89,7 +90,7 @@
         android:padding="15dp"
         android:background="@drawable/bg_round5dp_grey"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_tupian">
+        app:layout_constraintTop_toBottomOf="@+id/images">
 
 
         <TextView
