--- a/app/src/main/res/layout/activity_food_by_type.xml
+++ b/app/src/main/res/layout/activity_food_by_type.xml
@@ -36,7 +36,7 @@
                 android:id="@+id/ll_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
-                android:background="@color/white"
+                android:background="@drawable/bg_gradient_white_grey"
                 app:contentInsetStart="0dp"
                 app:contentInsetStartWithNavigation="0dp"
                 app:layout_collapseMode="pin">
