--- a/app/src/main/res/layout/fragment_chart_nodata.xml
+++ b/app/src/main/res/layout/fragment_chart_nodata.xml
@@ -2,64 +2,68 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:background="@drawable/bg_gradient_white_grey" />
 
     <LinearLayout
         android:id="@+id/ll_nonet"
-        android:visibility="gone"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_height="match_parent">
+        android:visibility="gone">
 
 
         <ImageView
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="120dp"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:src="@color/color_FF6100"/>
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="120dp"
+            android:src="@color/color_FF6100" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
-            android:textSize="15sp"
-            android:textStyle="bold"
+            android:text="网络链接失败"
             android:textColor="@color/color_3B3838"
-            android:layout_gravity="center_horizontal"
-            android:text="网络链接失败"/>
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:textSize="12sp"
-            android:textColor="@color/color_7C7877"
             android:layout_gravity="center_horizontal"
-            android:text="请检查您的网络设置或重新加载"/>
+            android:layout_marginTop="10dp"
+            android:text="请检查您的网络设置或重新加载"
+            android:textColor="@color/color_7C7877"
+            android:textSize="12sp" />
 
         <TextView
             android:layout_width="230dp"
             android:layout_height="40dp"
-            android:layout_marginTop="25dp"
-            android:gravity="center"
-            android:textSize="17sp"
-            android:background="@drawable/btn_stroke_yellow"
-            android:textColor="@color/FF6200"
             android:layout_gravity="center_horizontal"
-            android:text="重新加载"/>
+            android:layout_marginTop="25dp"
+            android:background="@drawable/btn_stroke_yellow"
+            android:gravity="center"
+            android:text="重新加载"
+            android:textColor="@color/FF6200"
+            android:textSize="17sp" />
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/ll_havedata"
+        android:id="@+id/ll_nodata"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="5dp"
@@ -73,9 +77,142 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerview"
+            android:id="@+id/recyclerview_tuijian"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
     </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/ll_havedata"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:paddingTop="15dp"
+            android:paddingBottom="10dp"
+            android:text="购物车"
+            android:textColor="@color/color_282525"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_clear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="7dp"
+            android:paddingRight="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:layout_alignParentRight="true"
+            android:text="全部清空"
+            android:textColor="@color/color_3B3838"
+            android:textSize="12sp" />
+
+
+
+
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_qujiesuan"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/white"
+            android:elevation="0dp">
+
+            <CheckBox
+                android:id="@+id/checkbox"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginLeft="15dp"
+                android:background="@drawable/checkbutton_chart"
+                android:button="@null"
+                android:gravity="center" />
+
+
+            <TextView
+                android:id="@+id/tv_quanxuan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/checkbox"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginLeft="9dp"
+                android:textSize="12sp"
+                android:textColor="@color/color_3B3838"
+                android:text="全选"/>
+
+            <TextView
+                android:id="@+id/tv_heji"
+                app:layout_constraintLeft_toRightOf="@+id/tv_quanxuan"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="60dp"
+                android:layout_marginTop="2dp"
+                android:text="合计"
+                android:textColor="@color/color_282626"
+                android:textSize="12sp" />
+
+
+            <TextView
+                android:id="@+id/tv_heji_money"
+                app:layout_constraintLeft_toRightOf="@+id/tv_heji"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:layout_marginLeft="6dp"
+                android:text="¥10"
+                android:textColor="@color/color_FF564A"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_des"
+                app:layout_constraintLeft_toLeftOf="@+id/tv_heji"
+                app:layout_constraintTop_toBottomOf="@+id/tv_heji"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
+                android:text="满20.00元可免费配送"
+                android:textColor="@color/color_7C7877"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/tv_confirm"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="100dp"
+                android:layout_height="33dp"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/btn_gradient_yellow_round"
+                android:gravity="center"
+                android:text="去结算"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_below="@+id/tv_title"
+            android:layout_above="@+id/cl_qujiesuan"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </RelativeLayout>
 </FrameLayout>
