--- a/app/src/main/res/layout/item_store_food.xml
+++ b/app/src/main/res/layout/item_store_food.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,18 +14,13 @@
         android:layout_height="85dp"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
-        android:src="@drawable/food2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:src="@drawable/food2" />
 
     <ImageView
         android:id="@+id/iv_goods_img_tip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/bg_stroke_tag"
-        app:layout_constraintLeft_toLeftOf="@+id/iv_goods_img"
-        app:layout_constraintTop_toTopOf="@+id/iv_goods_img" />
+        android:src="@drawable/bg_stroke_tag" />
 
     <TextView
         android:id="@+id/iv_goods_name"
@@ -36,9 +31,10 @@
         android:textColor="@color/color_272525"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@+id/iv_goods_img"
-        app:layout_constraintTop_toTopOf="@+id/iv_goods_img"
-        tools:text="精品海鲜捞面" />
+        tools:text=""
+        android:layout_alignTop="@+id/iv_goods_img"
+        android:layout_toRightOf="@+id/iv_goods_img"
+        android:layout_toEndOf="@+id/iv_goods_img" />
 
     <TextView
         android:id="@+id/iv_goods_detail"
@@ -47,8 +43,8 @@
         android:text="来自地道台湾大师"
         android:textColor="@color/color_7B7777"
         android:textSize="12sp"
-        app:layout_constraintLeft_toLeftOf="@+id/iv_goods_name"
-        app:layout_constraintTop_toBottomOf="@+id/iv_goods_name" />
+        android:layout_below="@+id/iv_goods_name"
+        android:layout_alignLeft="@+id/iv_goods_name" />
 
     <TextView
         android:id="@+id/iv_goods_comment"
@@ -57,8 +53,8 @@
         android:text="剩余100份  月售2000"
         android:textColor="@color/color_7B7777"
         android:textSize="12sp"
-        app:layout_constraintLeft_toLeftOf="@+id/iv_goods_name"
-        app:layout_constraintTop_toBottomOf="@+id/iv_goods_detail" />
+        android:layout_alignLeft="@+id/iv_goods_name"
+        android:layout_below="@+id/iv_goods_detail"/>
 
     <TextView
         android:id="@+id/iv_goods_price"
@@ -67,9 +63,9 @@
         android:text="¥10"
         android:textColor="@color/color_FF4F4F"
         android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_goods_img"
-        app:layout_constraintLeft_toLeftOf="@+id/iv_goods_name"/>
+        android:layout_alignBottom="@+id/iv_goods_img"
+        android:layout_alignLeft="@+id/iv_goods_name"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/iv_goods_price_past"
@@ -80,15 +76,15 @@
         android:textColor="@color/color_ccc"
         android:textSize="11sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_goods_img"
-        app:layout_constraintLeft_toRightOf="@+id/iv_goods_price"/>
+        android:layout_alignBottom="@+id/iv_goods_img"
+        android:layout_toRightOf="@+id/iv_goods_price"/>
 
     <com.bee.user.widget.AddRemoveView
         android:id="@+id/iv_goods_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true" />
 
     <TextView
         android:id="@+id/tv_choosetype"
@@ -104,7 +100,7 @@
         android:paddingBottom="2dp"
         android:background="@drawable/btn_gradient_yellow_round"
         android:text="选规格"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
