--- a/app/src/main/res/drawable/checkbutton_chart.xml
+++ b/app/src/main/res/drawable/checkbutton_chart.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/icon_biyan" android:state_checked="false" />
-    <item android:drawable="@drawable/icon_gouxuan" android:state_checked="true" />
+    <item android:drawable="@drawable/icon_gouxuan_gouwuche" android:state_checked="false" />
+    <item android:drawable="@drawable/icon_xuanzhong_gouwuche" android:state_checked="true" />
 </selector>
