--- a/app/src/main/res/layout/fragment_chart_data.xml
+++ b/app/src/main/res/layout/fragment_chart_data.xml
@@ -10,7 +10,6 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-
         android:orientation="vertical"
         android:paddingRight="15dp"
         android:paddingLeft="15dp"
@@ -30,10 +29,11 @@
 
             <CheckBox
                 android:id="@+id/cb_1"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:background="@drawable/checkbutton_chart"
-                android:button="@null"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:button="@drawable/checkbutton_chart"
                 android:gravity="center" />
 
             <TextView
