--- a/app/src/main/res/layout/item_chart_food.xml
+++ b/app/src/main/res/layout/item_chart_food.xml
@@ -6,15 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <RadioButton
-        android:id="@+id/rb_1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="3dp"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:background="@drawable/checkbutton_chart"
-        android:button="@null"
+    <CheckBox
+        android:id="@+id/cb_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingRight="5dp"
+        android:button="@drawable/checkbutton_chart"
         android:gravity="center" />
 
     <include layout="@layout/item_store_food"/>
