--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,4 +35,5 @@
     <color name="color_FF6600">#FF6600</color>
     <color name="color_3C3838">#3C3838</color>
     <color name="color_FF564A">#FF564A</color>
+    <color name="color_FF5549">#ff5549</color>
 </resources>
