--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="title_bar_shadow_height">47dp</dimen>
     <dimen name="title_bar_height">44dp</dimen>
+    <dimen name="bg_white_grey">120dp</dimen>
 </resources>
