--- a/app/src/main/res/layout/activity_youhuiquan.xml
+++ b/app/src/main/res/layout/activity_youhuiquan.xml
@@ -7,6 +7,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/bg_white_grey"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:background="@drawable/bg_gradient_white_grey" />
 
 
@@ -30,7 +32,7 @@
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
-        android:text="@string/app_name"
+        android:text="选择红包/优惠券"
         android:textColor="@color/color_282626"
         android:textSize="18sp"
         android:textStyle="bold"
