--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,4 +36,5 @@
     <color name="color_3C3838">#3C3838</color>
     <color name="color_FF564A">#FF564A</color>
     <color name="color_FF5549">#ff5549</color>
+    <color name="color_f9f9f9">#f9f9f9</color>
 </resources>
