--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -37,4 +37,7 @@
     <color name="color_FF564A">#FF564A</color>
     <color name="color_FF5549">#ff5549</color>
     <color name="color_f9f9f9">#f9f9f9</color>
+
+    <color name="color_3e7dfb">#3e7dfb</color>
+
 </resources>
