--- a/app/src/main/res/drawable/btn_stroke_yellow.xml
+++ b/app/src/main/res/drawable/btn_stroke_yellow.xml
@@ -7,5 +7,5 @@
     <corners android:radius="100dp" />
 
     <stroke android:color="@color/color_FF6100"
-        android:width="1dp"/>
+        android:width="1px"/>
 </shape>
