--- a/app/src/main/res/layout/activity_password_login.xml
+++ b/app/src/main/res/layout/activity_password_login.xml
@@ -77,8 +77,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@color/transparent"
-            android:gravity="center_vertical"
-            android:textCursorDrawable="@drawable/cursor_white" />
+            android:gravity="center_vertical" />
 
 
         <View
