--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -49,13 +49,14 @@
         android:layout_height="60dp"
         android:orientation="horizontal">
 
-        <TextView
+        <EditText
             android:id="@+id/ed_user_code"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="60dp"
             android:hint="请输入验证码"
             android:inputType="number"
+            android:background="@color/transparent"
             android:maxLength="10"
             android:gravity="center_vertical"
             android:textColor="@color/color_282626"
@@ -64,14 +65,10 @@
             android:textSize="16sp" />
 
 
-        <TextView
+        <com.bee.user.widget.SendCodeView
             android:id="@+id/code_text"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="发送验证码"
-            android:gravity="center"
-            android:textColor="@color/color_3D7DFB"
-            android:textSize="12sp"/>
+            android:layout_height="match_parent" />
     </LinearLayout>
 
     <View
@@ -95,7 +92,7 @@
 
 
     <TextView
-        android:id="@+id/tv_sure"
+        android:id="@+id/tv_agree"
         android:layout_width="290dp"
         android:layout_height="40dp"
         android:layout_marginTop="40dp"
