--- a/app/src/main/res/layout/dialog_order_choose_time.xml
+++ b/app/src/main/res/layout/dialog_order_choose_time.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="285dp"
-    android:background="@drawable/bg_topround20dp_white"
-    android:paddingBottom="30dp">
+    android:background="@drawable/bg_topround20dp_white">
 
     <ImageView
         android:id="@+id/close"
@@ -14,8 +13,7 @@
         android:layout_marginRight="5dp"
         android:padding="10dp"
         android:src="@drawable/icon_guanbi"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_alignParentRight="true" />
 
 
     <TextView
@@ -27,18 +25,14 @@
         android:text="选择预定送达时间"
         android:textColor="@color/color_282626"
         android:textSize="17sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_centerHorizontal="true"/>
 
 
     <com.bee.user.widget.RadioGroupPlus
         android:id="@+id/buttons"
         android:layout_width="100dp"
         android:layout_height="80dp"
-        android:layout_marginTop="56dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_marginTop="56dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -74,9 +68,18 @@
 
     <View
         android:layout_width="100dp"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:background="@color/color_F5F5F5"
-        app:layout_constraintTop_toBottomOf="@+id/buttons"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_below="@+id/buttons"/>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_toRightOf="@+id/buttons"
+        android:layout_alignTop="@+id/buttons"/>
+
+
+</RelativeLayout>
