--- a/app/src/main/res/layout/item_store_food.xml
+++ b/app/src/main/res/layout/item_store_food.xml
@@ -83,8 +83,8 @@
         android:id="@+id/iv_goods_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignBottom="@+id/iv_goods_img"
+        android:layout_alignParentRight="true"/>
 
     <TextView
         android:id="@+id/tv_choosetype"
