--- a/app/src/main/res/layout/dialog_store_bottom_choose.xml
+++ b/app/src/main/res/layout/dialog_store_bottom_choose.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="30dp"
-    android:paddingTop="20dp"
+    android:paddingTop="4dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg_topround20dp_white">
 
@@ -23,6 +23,13 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/item_food"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -33,7 +40,7 @@
         android:textSize="17sp"
         android:background="@drawable/btn_gradient_yellow_round"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/item_food"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerview"
         app:layout_constraintLeft_toLeftOf="parent"
         android:textColor="@color/white"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
