--- a/app/src/main/res/layout/dialog_store_bottom_selected.xml
+++ b/app/src/main/res/layout/dialog_store_bottom_selected.xml
@@ -1,52 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.bee.user.widget.DragDialogLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/bg_topround20dp_white">
+    android:layout_height="wrap_content">
 
-
-    <TextView
-        android:id="@+id/yixuanshangping"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:text="已选商品"
-        android:textSize="14sp"
-        android:textColor="@color/color_282525"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <TextView
-        android:id="@+id/clean"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:text="清空"
-        android:textSize="12sp"
-        android:textColor="@color/color_7C7877"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
-        android:layout_marginTop="4dp"
-        android:paddingRight="5dp"
-        android:paddingLeft="5dp"
-        android:paddingBottom="44dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/yixuanshangping"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <include layout="@layout/item_store_bottom"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/recyclerview"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:background="@drawable/bg_topround20dp_white">
+
+
+        <TextView
+            android:id="@+id/yixuanshangping"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            android:text="已选商品"
+            android:textColor="@color/color_282525"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/clean"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:padding="15dp"
+            android:text="清空"
+            android:textColor="@color/color_7C7877"
+            android:textSize="12sp" />
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/yixuanshangping"
+            android:layout_marginTop="4dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingBottom="44dp" />
+
+
+    </RelativeLayout>
+</com.bee.user.widget.DragDialogLayout>
